--- a/docker-compose-arm.yml
+++ b/docker-compose-arm.yml
@@ -3,8 +3,9 @@ services:
   telegraf:
     image: mihudec/telegraf-snmp-net
     container_name: telegraf
-    env_file: .tig.env
     restart: on-failure
+    #env_file:
+      #- tig.env
     volumes:
    # - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
      - telegraf_data:/home/usuario/ws/usuario/TIGstack-git1/volumes/telegraf
@@ -21,11 +22,11 @@ services:
     container_name: influxdb
     restart: always
     environment:
-      - DOCKER_INFLUXDB_INIT_MODE="${DOCKER_INFLUXDB_INIT_MODE}"
-      - DOCKER_INFLUXDB_INIT_USERNAME="${DOCKER_INFLUXDB_INIT_USERNAME}"
-      - DOCKER_INFLUXDB_INIT_PASSWORD="${DOCKER_INFLUXDB_INIT_PASSWORD}"
-      - DOCKER_INFLUXDB_INIT_ORG="${DOCKER_INFLUXDB_INIT_ORG}"
-      - DOCKER_INFLUXDB_INIT_BUCKET="${DOCKER_INFLUXDB_INIT_BUCKET}"
+      - DOCKER_INFLUXDB_INIT_MODE=${MODE}
+      - DOCKER_INFLUXDB_INIT_USERNAME=${USERNAME}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=${PASSWORD}
+      - DOCKER_INFLUXDB_INIT_ORG=${ORG}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${BUCKET}
       #- DOCKER_INFLUXDB_INIT_RETENTION=
       #- DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
     ports:
@@ -40,8 +41,8 @@ services:
     depends_on:
       - influxdb
     environment:
-      - GF_SECURITY_ADMIN_USER="${USER}"
-      - GF_SECURITY_ADMIN_PASSWORD="${AUTH}"
+      - GF_SECURITY_ADMIN_USER=${USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${AUTH}
       - GF_INSTALL_PLUGINS=
     links:
       - influxdb
