--- a/docker-compose-amd.yml
+++ b/docker-compose-amd.yml
@@ -8,7 +8,7 @@ services:
       #- tig.env
     volumes:
      - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
-     - telegraf_data:/home/usuario/ws/usuario/TIGstack-git1/volumes/telegraf
+     - telegraf_data:$HOME/ws/usuario/TIGstack-git1/volumes/telegraf
     depends_on:
       - influxdb
     links:
@@ -32,7 +32,7 @@ services:
     ports:
       - '8086:8086'
     volumes:
-      - influxdb_data:/home/usuario/ws/usuario/TIGstack-git1/volumes/influxdb
+      - influxdb_data:$HOME/ws/usuario/TIGstack-git1/volumes/influxdb
 
   grafana:
     image: grafana/grafana
@@ -49,7 +49,7 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - grafana_data:/home/usuario/ws/usuario/TIGstack-git1/volumes/grafana
+      - grafana_data:$HOME/ws/usuario/TIGstack-git1/volumes/grafana
 
 volumes:
   grafana_data: {}
